fixed card image height on iphone

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -15,3 +15,7 @@ $color: rgb(255, 255, 255);
 .card-rows {
   margin: 20px;
 }
+
+.image {
+  min-height: 280px;
+}
